// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuth renders correctly with user 1`] = `
<div>
  <Button
    active={false}
    className="button-logout"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "marginBottom": "30px",
        "position": "absolute",
        "right": "30px",
        "top": "30px",
      }
    }
    type="button"
    variant="primary"
  >
    Logout
  </Button>
</div>
`;

exports[`OAuth renders correctly without user 1`] = `
<div>
  <Button
    active={false}
    className="button-login"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "marginBottom": "30px",
        "position": "absolute",
        "right": "30px",
        "top": "30px",
      }
    }
    type="button"
    variant="primary"
  >
    Login
  </Button>
</div>
`;
